# vernier

./: .clang-format  .clang-tidy  .cmake-format.yaml  .dockerignore  .editorconfig  .flake8  .gitignore  .hadolint.yaml  .markdownlint.yaml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  ExternalDependencies.cmake  LICENSE  Makefile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
cmake/: vernierConfig.cmake.in
cmake/toolchains/: aarch64-linux-gnu-base.cmake  jetson-aarch64.cmake  riscv64-linux-gnu.cmake  rpi-aarch64.cmake
cmake/vernier/: All.cmake  BuildAcceleration.cmake  Core.cmake  Coverage.cmake  Cuda.cmake  Summary.cmake  Targets.cmake  Testing.cmake  Tooling.cmake
docker/: base.Dockerfile  final.Dockerfile
docker/builder/: cpu.Dockerfile  cuda.Dockerfile  jetson.Dockerfile  riscv64.Dockerfile  rpi.Dockerfile
docker/dev/: cpu.Dockerfile  cuda.Dockerfile  jetson.Dockerfile  riscv64.Dockerfile  rpi.Dockerfile
docker/toolchain/: aarch64.Dockerfile  riscv64.Dockerfile  rpi.Dockerfile
docs/: Doxyfile.common.in
mk/: build.mk  clean.mk  common.mk  compose.mk  coverage.mk  docker.mk  format.mk  sanitizers.mk  test.mk  tools.mk
src/bench/: CMakeLists.txt
src/bench/bpf/: fsync_latency.bt  write_latency.bt
src/bench/demo/: CMakeLists.txt  README.md
src/bench/demo/cpu/: 01_BasicWorkflow_Demo.cpp  02_PerfProfiler_Demo.cpp  03_GperfProfiler_Demo.cpp  04_CacheFriendly_Demo.cpp  05_BranchOptimization_Demo.cpp  06_ThreadScaling_Demo.cpp  07_CallgrindProfiler_Demo.cpp  08_RaplProfiler_Demo.cpp  09_BpftraceProfiler_Demo.cpp
src/bench/demo/docs/: 01_BASIC_WORKFLOW.md  02_PERF_PROFILER.md  03_GPERF_PROFILER.md  04_CACHE_FRIENDLY.md  05_BRANCH_OPTIMIZATION.md  06_THREAD_SCALING.md  07_CALLGRIND_PROFILER.md  08_RAPL_PROFILER.md  09_BPFTRACE_PROFILER.md  10_GPU_BASIC_WORKFLOW.md  11_NSIGHT_PROFILER.md  12_SHARED_MEMORY_OPT.md
src/bench/demo/gpu/: 01_GpuBasicWorkflow_Demo.cu  02_NsightProfiler_Demo.cu  03_SharedMemoryOpt_Demo.cu
src/bench/demo/helpers/: DemoWorkloads.hpp
src/bench/docs/: ADVANCED_GUIDE.md  API_REFERENCE.md  BPF_SCRIPTS.md  CI_CD_INTEGRATION.md  CPU_GUIDE.md  DOCKER_SETUP.md  GPU_GUIDE.md  TROUBLESHOOTING.md
src/bench/inc/: Perf.hpp  PerfConfig.hpp  PerfCsv.hpp  PerfGpu.hpp  PerfGpuConfig.hpp  PerfGpuHarness.hpp  PerfGpuStats.hpp  PerfGpuTestMacros.hpp  PerfHarness.hpp  PerfListener.hpp  PerfRegistry.hpp  PerfStats.hpp  PerfTestMacros.hpp  PerfUtils.hpp  PerfValidation.hpp  Profiler.hpp  ProfilerBpftrace.hpp  ProfilerCallgrind.hpp  ProfilerGperf.hpp  ProfilerNsight.hpp  ProfilerPerf.hpp  ProfilerRAPL.hpp
src/bench/ptst/: CMakeLists.txt
src/bench/ptst/cpu/: AllocationOverhead_pTest.cpp  BranchPrediction_pTest.cpp  CacheEffects_pTest.cpp  CacheHierarchy_pTest.cpp  Contention_pTest.cpp  CoreFeatures_pTest.cpp  MeasuredAPI_pTest.cpp  MeasurementReliability_pTest.cpp  MemoryBandwidth_pTest.cpp  PayloadScaling_pTest.cpp  Profilers_pTest.cpp  SemanticMacros_pTest.cpp  ThreadScaling_pTest.cpp
src/bench/ptst/gpu/: GpuBandwidth_pTest.cu  GpuBasics_pTest.cu  GpuMemoryCoalescing_pTest.cu  GpuMemoryStrategies_pTest.cu  GpuMultiDevice_pTest.cu  GpuProfilers_pTest.cu  GpuSharedMemory_pTest.cu  GpuTestMain_pTest.cu  GpuUnifiedMemory_pTest.cu
src/bench/ptst/helpers/: TestHelpers.hpp
src/bench/src/: PerfGpuHarness.cu  ProfilerBpftrace.cpp  ProfilerCallgrind.cpp  ProfilerGperf.cpp  ProfilerNsight.cu  ProfilerPerf.cpp  ProfilerRAPL.cpp
src/bench/utst/: CMakeLists.txt  PerfConfig_uTest.cpp  PerfCsv_uTest.cpp  PerfRegistry_uTest.cpp  PerfStats_uTest.cpp
tools/: CMakeLists.txt  README.md
tools/py/: pyproject.toml
tools/py/src/vernier_tools/benchmarking/: bench_plot.py
tools/py/tests/: test_bench_plot.py
tools/rust/: Cargo.toml
tools/rust/src/: lib.rs
tools/rust/src/bench/: compare.rs  csv_loader.rs  flamegraph.rs  mod.rs  report.rs  runner.rs  stats.rs  validate.rs
tools/rust/tests/: bench.rs
tools/rust/tests/fixtures/: sample_bench.csv  sample_bench_old_format.csv  sample_bench_regressed.csv
