[package]
name = "vernier-rust-tools"
version = "1.0.0"
edition = "2021"
description = "CLI tools for the Vernier benchmarking framework"
authors = ["Kevin Alexander Gomez"]
license = "MIT"
resolver = "2"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"                        # CSV parsing with serde support

# Conditionally compile when the "cuda" feature is enabled
cuda-sys = { version = "0.2", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[features]
default = []
cuda = ["dep:cuda-sys"]

[profile.dev]
debug = true
overflow-checks = true
opt-level = 0

[profile.release]
debug = false
overflow-checks = true
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[lib]
name = "vernier_rust_tools"
path = "src/lib.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[package.metadata.docs.rs]
features = ["cuda"]
no-default-features = true
